# Gobang_MCTS

./: .gitignore  CMakeLists.txt  README.md  ai.cpp  ai.h  config.h  forbid.cpp  forbid.h  game.cpp  game.h  gamemodel.cpp  gamemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
